--- a/index.html
+++ b/index.html
@@ -13,10 +13,40 @@
         crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>Weather App</h1>
-    <button class="btn btn-success">Local Forecast</button>
+    <div class="container">
+        <h1>Sydney</h1>
+        <ul>
+            <li>
+                Friday, 05:20 
+            </li>
+            <li>
+                Clear   
+            </li>  
+        </ul>
+        <div class="row">
+            <div class="col-md-3">
+                <img src="https://ssl.gstatic.com/onebox/weather/48/sunny.png" alt="sunny">
+            </div>
+            <div class="col-md-3">
+                20 °C|°F
+            </div>
+            <div class="col-md-6">
+                <ul>
+                    <li>
+                        Precipitation: 0%
+                    </li>
+                    <li>
+                        Humidity: 73%h
+                    </li>
+                    <li>
+                        Wind: 2 km/h
+                    </li>
+                </ul>
+            </div>
+        </div>
+        
 
-
+    </div>
     <script src="src/index.js"></script>
 </body>
 </html>
