--- a/index.html
+++ b/index.html
@@ -45,7 +45,13 @@
             </div>
         </div>
         
-
+        <small>
+            <a href="https://github.com/MelaniaZ4/Weather-Application-Project.git"
+            target="_blank"
+            >Open-source code</a
+            > 
+            by Melanie Brandes
+        </small>
     </div>
     <script src="src/index.js"></script>
 </body>
