--- a/index.html
+++ b/index.html
@@ -5,53 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
-    <link rel="stylesheet" href="src/styles.css">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="src/styles.css">
 </head>
 <body>
     <div class="container">
-        <h1>Sydney</h1>
-        <ul>
-            <li>
-                Friday, 05:20 
-            </li>
-            <li>
-                Clear   
-            </li>  
-        </ul>
-        <div class="row">
-            <div class="col-md-3">
-                <img src="https://ssl.gstatic.com/onebox/weather/48/sunny.png" alt="sunny">
+        <div class="weather-app">  
+            <h1 class="city">Sydney</h1>
+            <ul>
+                <li>
+                    Friday, 05:20 
+                </li>
+                <li>
+                    Clear   
+                </li>  
+            </ul>
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="https://ssl.gstatic.com/onebox/weather/48/sunny.png" alt="sunny">
+                </div>
+                <div class="col-md-3">
+                    20 °C|°F
+                </div>
+                <div class="col-md-6">
+                    <ul>
+                        <li>
+                            Precipitation: 0%
+                        </li>
+                        <li>
+                            Humidity: 73%h
+                        </li>
+                        <li>
+                            Wind: 2 km/h
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div class="col-md-3">
-                20 °C|°F
-            </div>
-            <div class="col-md-6">
-                <ul>
-                    <li>
-                        Precipitation: 0%
-                    </li>
-                    <li>
-                        Humidity: 73%h
-                    </li>
-                    <li>
-                        Wind: 2 km/h
-                    </li>
-                </ul>
-            </div>
+            <small>
+                <a href="https://github.com/MelaniaZ4/Weather-Application-Project.git"
+                target="_blank"
+                >Open-source code</a
+                > 
+                by Melanie Brandes
+            </small>
         </div>
-        
-        <small>
-            <a href="https://github.com/MelaniaZ4/Weather-Application-Project.git"
-            target="_blank"
-            >Open-source code</a
-            > 
-            by Melanie Brandes
-        </small>
     </div>
     <script src="src/index.js"></script>
 </body>
