--- a/index.html
+++ b/index.html
@@ -15,37 +15,52 @@
 </head>
 <body>
     <div class="container">
-        <div class="weather-app">  
-            <h1 class="city">Sydney</h1>
-            <ul>
-                <li>
-                    Friday, 05:20 
-                </li>
-                <li>
-                    Clear   
-                </li>  
-            </ul>
-            <div class="row">
-                <div class="col-md-3">
-                    <img src="https://ssl.gstatic.com/onebox/weather/48/sunny.png" alt="sunny">
-                </div>
-                <div class="col-md-3">
-                    20 °C|°F
-                </div>
-                <div class="col-md-6">
+        <div class="weather-app-wrapper">
+            <div class="weather-app">  
+                <h1 class="city">Sydney</h1>
+                <div class="overview">
                     <ul>
                         <li>
-                            Precipitation: 0%
+                            Friday, 05:20 
                         </li>
                         <li>
-                            Humidity: 73%h
-                        </li>
-                        <li>
-                            Wind: 2 km/h
-                        </li>
+                            Clear   
+                        </li>  
                     </ul>
                 </div>
-            </div>
+                <div class="row">       
+                    <div class="col-md-6">
+                        <div class="clear-fix">
+                            <img 
+                            src="https://ssl.gstatic.com/onebox/weather/48/sunny.png" 
+                            alt="sunny"
+                            class= "float-left">
+                        </div>
+                        <div class="float-left">
+                            <span id="temperature">
+                            20 
+                            </span>
+                            <span id="units">
+                            °C|°F
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <ul>
+                            <li>
+                                Precipitation: 0%
+                            </li>
+                            <li>
+                                Humidity: 73%h
+                            </li>
+                            <li>
+                                Wind: 2 km/h
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            
+            </div> 
             <small>
                 <a href="https://github.com/MelaniaZ4/Weather-Application-Project.git"
                 target="_blank"
