--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1 id="city"></h1>
                 <div class="overview">
                     <ul>
-                        <li>
+                        <li id="date">
                             Friday, 05:20 
                         </li>
                         <li id="description">
@@ -58,7 +58,7 @@
                                 <span id="humidity">73</span>
                                 %
                             </li>
-                            <li  >
+                            <li>
                                 Wind: 
                                 <span id="windSpeed">2</span>
                                 km/h
