--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="overview">
                     <ul>
                         <li id="date">
-                            Friday, 05:20 
+ 
                         </li>
                         <li id="description">
                                
@@ -34,9 +34,10 @@
                     <div class="col-md-6">
                         <div class="clear-fix">
                             <img 
-                            src="https://ssl.gstatic.com/onebox/weather/48/sunny.png" 
+                            src="" 
                             alt="sunny"
-                            class= "float-left">
+                            class= "float-left"
+                            id="weather-icon">
                         </div>
                         <div class="float-left">
                             <span id="temperature"> 
