Implemented unit conversion

--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
                             class= "float-left"
                             id="weather-icon">
                         </div>
-                        <div class="float-left">
+                        <div class="float-left weather-temperature">
                             <span id="temperature"> 
                             </span>
                             <span id="units">
-                            °C|°F
+                                <a id="celsius" href="#" class="active">°C</a>
+                            |
+                                <a href="#" id="fahrenheit">°F</span> 
                             </span>
                         </div>
                     </div>
