--- a/index.html
+++ b/index.html
@@ -89,81 +89,100 @@
                         </ul>
                     </div>
                 </div>
-            <div class="row weather-forecast">
-                <!-- Forecast -->
-                <div class="col-2 day1">
-                    <h3 id="forecast-day">
-                        Mon
-                    </h3>
-                    <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day1-icon">
-                    <strong>
-                        21°
-                    </strong>
-                    <span id="temperature-low">
-                        17</span>
-                </div>
-                <div class="col-2 day2">
-                    <h3 id="forecast-day">
-                        Tue
-                    </h3>
-                    <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day2-icon">
-                    <strong id="temperature-high">
-                        21°
-                    </strong>
-                    <span id="temperature-low">
-                        17
-                    </span>
-                </div>
-                <div class="col-2 day3">
-                    <h3 id="forecast-day">
-                        Wed
-                    </h3>
-                    <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day3-icon">
-                    <strong id="temperature-high">
-                        21°
-                    </strong>
-                    <span id="temperature-low">
-                        17
-                    </span>
-                </div>
-                <div class="col-2 day4">
-                    <h3 id="forecast-day">
-                        Thu
-                    </h3>
-                    <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day4-icon">
-                    <strong id="temperature-high">
-                        21°
-                    </strong>
-                    <span id="temperature-low">
-                        17
-                    </span>
-                </div>
-                <div class="col-2 day5">
-                    <h3 id="forecast-day">
-                        Fri
-                    </h3>
-                    <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day5-icon">
-                    <strong id="temperature-high">
-                        21°
-                    </strong>
-                    <span id="temperature-low">
-                        17
-                    </span>
-                </div>
-                <div class="col-2 day6">
-                    <h3 id="forecast-day">
-                        Sat
-                    </h3>
-                    <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day3-icon">
-                    <strong id="temperature-high">
-                        21°
-                    </strong>
-                    <span id="temperature-low">
-                        17
-                    </span>
-                </div>
+            
+                
+                <div class="row weather-forecast">
+                    <!-- Forecast -->
+                    <div class="col-2 day1">
+                        <h3 id="forecast-day">
+                            Mon
+                        </h3>
+                        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day1-icon">
+                        <div class="weather-forecast-temperature">
+                            <strong id="temperature-high">
+                                21°
+                            </strong>
+
+                            <span id="temperature-low">
+                                17
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-2 day2">
+                        <h3 id="forecast-day">
+                            Tue
+                        </h3>
+                        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day2-icon">
+                        <div class="weather-forecast-temperature">
+                            <strong id="temperature-high">
+                                21°
+                            </strong>
+                            <span id="temperature-low">
+                                17
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-2 day3">
+                        <h3 id="forecast-day">
+                            Wed
+                        </h3>
+                        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day3-icon">
+                        <div class="weather-forecast-temperature">
+                            <strong id="temperature-high">
+                                21°
+                            </strong>
+                            <span id="temperature-low">
+                                17
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-2 day4">
+                        <h3 id="forecast-day">
+                            Thu
+                        </h3>
+                        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day4-icon">
+                        <div class="weather-forecast-temperature">
+                            <strong id="temperature-high">
+                                21°
+                            </strong>
+                            <span id="temperature-low">
+                                17
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-2 day5">
+                        <h3 id="forecast-day">
+                            Fri
+                        </h3>
+                        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day5-icon">
+                        <div class="weather-forecast-temperature">
+                            <strong id="temperature-high">
+                                21°
+                            </strong>
+                            <span id="temperature-low">
+                                17
+                            </span>
+                        </div>
+                    </div>
+                    <div class="col-2 day6">
+                        <h3 id="forecast-day">
+                            Sat
+                        </h3>
+                        <img src="http://openweathermap.org/img/wn/01d@2x.png" alt="sunny" id="day3-icon">
+                        <div class="weather-forecast-temperature">
+                            <strong id="temperature-high">
+                                21°
+                            </strong>
+                            <span id="temperature-low">
+                                17
+                            </span>
+                        </div>
+                    </div>
+                    </div>
+
+
+
             </div>
-            </div> 
             <small>
                 <a href="https://github.com/MelaniaZ4/Weather-Application-Project.git"
                 target="_blank"
