Add background image

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 
         <link rel="stylesheet" href="src/styles.css">
 </head>
-<body>
-    <div class="container">
+<Body>
+    <div class="background">
+        <div class="container">
         <div class="weather-app-wrapper">
             <div class="weather-app">  
                 <form id="search-form" class="mb-3">
@@ -107,6 +108,7 @@
                 by Melanie Brandes
             </small>
         </div>
+    </div>
     </div>
     <script src="src/index.js"></script>
 </body>
